- Fixed some link colors.  Patch by Kristjan.

--- a/themes/xtemplate/xtemplate.css
+++ b/themes/xtemplate/xtemplate.css
@@ -26,10 +26,10 @@ a {
   font-weight: bold;
 }
 a:link {
-  color: #369;
+  color: #39c;
 }
 a:visited {
-  color: #000;
+  color: #369;
 }
 a:hover {
   color: #39C;
