--- a/misc/drupal.css
+++ b/misc/drupal.css
@@ -15,8 +15,9 @@ th                        { text-align: left; padding-right: 1em; border-bottom:
 .book hr                  { clear: both; border: 0; height: 1px; background-color: #888; color: #888; }
 .book .title              { font-weight: bold; font-size: 1.3em; }
 .book .last-updated       { font-size: 0.8em; margin-top: 0.25em; }
-.book .body               { margin: 1em 0 3em 0; }
+.book .body               { margin: 1em 0 1em 0; }
 .book .links              { clear: both; border-top: 1px solid #888; padding-top: 0.5em; }
+.book .nav .links         { margin-top: 2em; }
 
 .book .nav                { margin: 1em 0; clear: both; }
 .book .nav .prev          { float: left; width: 45%; padding-bottom: 0.5em; }
@@ -33,6 +34,7 @@ th                        { text-align: left; padding-right: 1em; border-bottom:
                             padding: 1px; margin: 0; font-size: 0.8em; }
 
 .container-inline div     { display: inline; }
+.container-inline div input { margin: 0; }
 
 .form-item .description   { font-size: 0.85em; }
 .form-item .title         { font-weight: bold; margin-top: 1.1em; margin-bottom: 1px; }
@@ -77,3 +79,4 @@ th                        { text-align: left; padding-right: 1em; border-bottom:
 tr.dark                   { background-color: #ddd; }
 tr.light                  { background-color: #eee; }
 pre                       { white-space: pre-wrap; white-space: -moz-pre-wrap; white-space: -o-pre-wrap; white-space: -pre-wrap;}
+pre, code                 { font-size: 11px; }
