--- a/misc/drupal.css
+++ b/misc/drupal.css
@@ -34,7 +34,7 @@ th                        { text-align: left; padding-right: 1em; border-bottom:
                             padding: 1px; margin: 0; font-size: 0.8em; }
 
 .container-inline div     { display: inline; }
-.container-inline div input { margin: 0; }
+.container-inline .form-submit { margin: 0; }
 
 .form-item .description   { font-size: 0.85em; }
 .form-item .title         { font-weight: bold; margin-top: 1.1em; margin-bottom: 1px; }
