Applied 0007.almaw.home-link-using-l.patch - Fix link_page to use l() to generate home link.
Applied 0058.kika.themeable-usermenu.patch
- Modifies user menu be themeable.

--- a/misc/drupal.css
+++ b/misc/drupal.css
@@ -75,6 +75,7 @@ th                        { text-align: left; padding-right: 1em; border-bottom:
 .ok                       { color: #080; }
 
 .user-login-block         { text-align: center; }
+.user-page-menu           { text-align: center; }
 .user-login-block, .user-information-block { white-space: nowrap; }
 tr.dark                   { background-color: #ddd; }
 tr.light                  { background-color: #eee; }
