1) Bugfix: changed INNER JOIN to LEFT JOIN to make forum topics with no comments show on the topic overview page.
2) Beautified the forum module views; rewritten to use the table() rendering functions, X HTML-ified the emitted code, added additional CSS tags, and removed hard-coded markup.  This improves themeabality; it should be able to mimic the view and color scheme of, say, http://www.phpbb.com/.

3) Reorganized forms and links (interactive elements) to improve usability.  Also ensured that the link names and page titles match.

4) Temporary removed container functionality: this simplified the work and eliminated some usability issues.

--- a/themes/xtemplate/xtemplate.css
+++ b/themes/xtemplate/xtemplate.css
@@ -32,7 +32,7 @@ a:visited {
   color: #369;
 }
 a:hover {
-  color: #39C;
+  color: #39c;
   text-decoration: underline;
 }
 p {
@@ -110,6 +110,13 @@ img {
   background-color: #eee;
   padding: 1em 1em 1em 1em;
   font-size: 0.8em;
+}
+#forum td {
+  padding: 0.5em 0.5em 0.5em 0.5em;
+}
+#forum td.statistics, #forum td.settings, #forum td.pager {
+  height: 1.5em;
+  border: 1px solid #bbb;
 }
 table {
   font-size: 1em;
