- Rewrote handling of forum icons and added default icons made by Steven   Wittens.
- Renamed some column titles in the forum module as per Moshe's suggestion.

- Introduced a 'more-link' class to position the 'more' links.  Removed
  hard-coded markup from the modules.

- Fixed bug in import module: the theme functions called a non-existing
  function.

--- a/misc/drupal.css
+++ b/misc/drupal.css
@@ -127,7 +127,7 @@ th {
   font-size: 0.9em;
   margin: 0.5em;
 }
-#forum td.posts, #forum td.topics, #forum td.last-post, #forum td.posted, #forum td.replies, #forum td.statistics, #forum td.settings, #forum td.pager {
+#forum td.created, #forum td.posts, #forum td.topics, #forum td.last-reply, #forum td.replies, #forum td.statistics, #forum td.settings, #forum td.pager {
   text-align: center;
   white-space: nowrap;
 }
@@ -196,6 +196,9 @@ th {
   text-align: left;
   margin: 0 auto;
   display: table;
+}
+.more-link {
+  text-align: right;
 }
 .node-form .form-text {
   display: block;
