- Removed left-overs from the rating module.  Patch by Gerhard.  Updated the   PostgreSQL and MSSQL database scheme as well.
- Made sure the update script updates the correct tables when database
  prefixing is enabled.  Patch by Bart Jansens.

- Improved the breadcrumb navigation of the book and the forum module as per
  Keith Instone's suggestions.

- Updated page titles (or block titles) and links to match.  Suggested by
  Keith Instone.

- Added missing 'thread' field to the comment table of the MySQL database scheme.
  Fixes bug #2590.

--- a/misc/drupal.css
+++ b/misc/drupal.css
@@ -127,7 +127,7 @@ th {
   font-size: 0.9em;
   margin: 0.5em;
 }
-#forum td.created, #forum td.posts, #forum td.topics, #forum td.last-reply, #forum td.replies, #forum td.statistics, #forum td.settings, #forum td.pager {
+#forum td.created, #forum td.posts, #forum td.topics, #forum td.last-reply, #forum td.replies, #forum td.pager {
   text-align: center;
   white-space: nowrap;
 }
