Implemented more suggestions by Keith:
- Made sure the 'Topic' title is only shown above the topics, not the icons.

- Automatically shorten the username when it is too long.  I implemented this
  as part of format_name() and could therefore nuke some code in the
  statistics module.  This is change is somewhat experimental and I'm willing
  to revert or change this if a number of people aren't too happy with this
  behavior.

- Left align the dates and authors: makes it easier/faster to scan.

- Made the little tablesort arrows clickable.

--- a/misc/drupal.css
+++ b/misc/drupal.css
@@ -128,8 +128,10 @@ th {
   margin: 0.5em;
 }
 #forum td.created, #forum td.posts, #forum td.topics, #forum td.last-reply, #forum td.replies, #forum td.pager {
-  text-align: center;
   white-space: nowrap;
+}
+#forum td.posts, #forum td.topics, #forum td.replies, #forum td.pager {
+  text-align: center;
 }
 .item-list .icon {
   color: #555;
