- Xtemplate improvements from Ax: "i find it annoying to have two empty blocks   (a blue - message - and a grey - footer - one) if my site doesn't have neither   of them set."

--- a/themes/xtemplate/xtemplate.css
+++ b/themes/xtemplate/xtemplate.css
@@ -108,7 +108,7 @@ img {
 }
 #footer {
   background-color: #eee;
-  padding: 1em 1em 1em 1em;
+  padding: 1em;
   font-size: 0.8em;
 }
 #forum td {
